  IMPROVEMENTS:

    * ``bzr export --format=tgz --root=NAME -`` to export a gzipped tarball 
      to stdout; also ``tar`` and ``tbz2``.
      (Martin Pool)

  BUGFIXES:

    * You can now compare file revisions in Windows diff programs from 
      Cygwin Bazaar.
      (Matt McClure, #209281)

  DOCUMENTATION:

   * Updated developer documentation.
     (Martin Pool)

  TESTING:

  API CHANGES:

  INTERNALS:


bzr 1.6beta2 2008-06-10
-----------------------

This release contains further progress towards our 1.6 goals of shallow
repositories, and contains a fix for some user-affecting bugs in the
repository layer.  Building working trees during checkout and branch is
now faster.

  BUG FIXES:

    * Avoid KnitCorrupt error extracting inventories from some repositories.
      (The data is not corrupt; an internal check is detecting a problem
      reading from the repository.)
      (Martin Pool, Andrew Bennetts, Robert Collins, #234748)

    * Fix infinite loop consuming 100% CPU when a connection is lost while
      reading a response body via the smart protocol v1 or v2.
      (Andrew Bennetts)
      
    * Inserting a bundle which changes the contents of a file with no trailing
      end of line, causing a knit snapshot in a 'knits' repository will no longer
      cause KnitCorrupt. (Robert Collins)

    * ``RemoteBranch.pull`` needs to return the ``self._real_branch``'s
      pull result. It was instead just returning None, which breaks ``bzr
      pull``. (John Arbash Meinel, #238149)

    * Sanitize branch nick before using it as an attachment filename in
      ``bzr send``. (Lukáš Lalinský, #210218)

    * Squash ``inv_entry.symlink_target`` to a plain string when
      generating DirState details. This prevents from getting a
      ``UnicodeError`` when you have symlinks and non-ascii filenames.
      (John Arbash Meinel, #135320)

  IMPROVEMENTS:

    * Added the 'alias' command to set/unset and display aliases. (Tim Penhey)
